k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: his
  labels:
    app: his-go
    env: production
